<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".login_view">

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton9">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/page5_title"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/login_title1"
            android:textColor="@color/navigationColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_text1"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/login_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/login_text2"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/login_email"
            android:inputType="text"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/login_text3"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/login_text4"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/login_conpassword"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/btnColor"
            android:text="@string/login_checkBox"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btnColor"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/background"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/googlebutton" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@color/background"
        android:backgroundTint="@color/background"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow_5720450"
        tools:layout_editor_absoluteX="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>